--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.4.7",
+    "@solana/web3.js": "^1.98.4",
     "expo": "^53.0.0",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.3",
