--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "certify-on-chain",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,15 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
+    "@metaplex-foundation/js": "0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^2.10.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.4.7",
     "@solana/web3.js": "^1.98.4",
+    "assert-browserify": "^2.0.0",
+    "buffer": "^6.0.3",
     "expo": "^53.0.0",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.3",
@@ -35,11 +40,15 @@
     "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
     "moti": "^0.30.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
     "react-native-clipboard": "^0.0.5",
+    "react-native-crypto": "^2.2.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.3.0",
@@ -47,8 +56,12 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
+  "overrides": {},
+  "resolutions": {},
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
