--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.4.7",
-    "@solana/web3.js": "^1.98.4",
-    "assert-browserify": "^2.0.0",
+  "@solana/web3.js": "^1.98.4",
+  "assert-browserify": "^2.0.0",
     "buffer": "^6.0.3",
     "expo": "^53.0.0",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-clipboard": "^7.1.5",
-    "expo-constants": "~17.1.3",
-    "expo-document-picker": "^13.1.6",
+  "expo-constants": "~17.1.3",
+  "expo-document-picker": "^13.1.6",
+  "expo-file-system": "~17.0.1",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
@@ -57,8 +58,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+  "stream-browserify": "^3.0.0",
+  "util": "^0.12.5",
+  "@supabase/supabase-js": "^2.45.4"
   },
   "overrides": {},
   "resolutions": {},
